Marker clustering: improve ui and logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_stop_info">Nearest stops</string>
     <string name="bus_number_title">Автобус %s</string>
     <string name="time_arrived_pattern">Через %s минут</string>
+    <string name="cluster_title_pattern" formatted="false">%s\nи еще %s</string>
 </resources>
